<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditsActivity">

    <LinearLayout
        android:id="@+id/creditsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/developers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/archivo_semibold"
            android:gravity="center"
            android:text="@string/developer"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/ImmortalIdiotTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/ImmortalIdiotTextView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="@font/archivo_semibold"
            android:gravity="center"
            android:onClick="telegramImmortalIdiot"
            android:text="@string/ImmortalIdiot"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/developers" />

        <TextView
            android:id="@+id/designer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/archivo_semibold"
            android:gravity="center"
            android:text="@string/designer"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImmortalIdiotTextView"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/BestPrincessTextView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="@font/archivo_semibold"
            android:gravity="center"
            android:onClick="telegramBestPrincess"
            android:text="@string/Anastasia"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/designer" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="125dp"
        android:layout_height="52dp"
        android:layout_marginStart="143dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/archivo_semibold"
        android:gravity="center"
        android:onClick="finishActivity"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>