<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModeSelectionActivity">

    <TextView
        android:id="@+id/modeSelection"
        android:layout_width="231dp"
        android:layout_height="40dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/archivo_medium"
        android:text="@string/change_mode"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loveEmojiGenerator"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="226dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/archivo_semibold"
        android:gravity="center"
        android:onClick="switchToGeneratorActivity"
        android:text="@string/emoji_generator"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dayWishGenerator"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/archivo_semibold"
        android:gravity="center"
        android:onClick="switchToDayWishGeneratorActivity"
        android:text="@string/day_wish_generator_mode"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loveEmojiGenerator"
        tools:ignore="TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nightWishGenerator"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/archivo_semibold"
        android:gravity="center"
        android:text="@string/night_wish_generator"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayWishGenerator"
        tools:ignore="TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="125dp"
        android:layout_height="52dp"
        android:layout_marginStart="143dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/archivo_semibold"
        android:gravity="center"
        android:onClick="goBack"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>