<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ModeSelectionFragment">

    <TextView
        android:id="@+id/mode_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/change_mode"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:fontFamily="@font/archivo_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:id="@+id/modes_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/emojis_generator"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:text="@string/emoji_generator"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/archivo_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/day_wish_generator"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:text="@string/day_wish_generator_mode"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/archivo_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/night_wish_generator"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:text="@string/night_wish_generator_mode"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/archivo_semibold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/developers_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:text="@string/developers"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/archivo_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>