<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NightWishGeneratorFragment">

    <TextView
        android:id="@+id/nightWishMode"
        android:layout_width="381dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/archivo_medium"
        android:gravity="center"
        android:text="@string/night_wish_generator"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:id="@+id/nightWishGeneratorContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/nightWishHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/number_of_emojis"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nightWishMode"
            tools:ignore="TextSizeCheck" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nightWishValueField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:digits="0123456789"
            android:fontFamily="@font/tomorrow_light"
            android:gravity="center"
            android:hint="@string/min_and_max_hint"
            android:inputType="numberPassword"
            android:textColor="@color/hint_color"
            android:textColorHint="@color/hint_color"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nightWishHint"
            tools:ignore="TextSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nightWishGenerateButton"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/archivo_semibold"
            android:gravity="center"
            android:text="@string/generate"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nightWishValueField"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nightWishBackButton"
        android:layout_width="125dp"
        android:layout_height="52dp"
        android:layout_marginStart="143dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/archivo_semibold"
        android:gravity="center"
        android:onClick="finishActivity"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>